BoaUAT/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <externalId>true</externalId>
        <label>Customer Number EXO</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accounting_Email__c</fullName>
        <label>Accounting Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Aged_Balance0__c</fullName>
        <label>Aged Balance 0</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aged_Balance1__c</fullName>
        <label>Aged Balance 1</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aged_Balance2__c</fullName>
        <label>Aged Balance 2</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Air_Freight_Lead_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Air Freight Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allow_Restricted_Goods__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Restricted Goods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alpha_Code__c</fullName>
        <label>Alpha Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOA_Offered_Cost__c</fullName>
        <label>BOA Offered Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BSB_Number__c</fullName>
        <label>BSB Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Balance</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Price__c</fullName>
        <label>Base Price</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRIMPER__c</fullName>
        <label>CRIMPER</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>H19MMFP</fullName>
                </value>
                <value>
                    <fullName>H19MMHP</fullName>
                </value>
                <value>
                    <fullName>H25MINI-HP</fullName>
                </value>
                <value>
                    <fullName>H25SECO</fullName>
                </value>
                <value>
                    <fullName>P16-240V</fullName>
                </value>
                <value>
                    <fullName>P16-24V</fullName>
                </value>
                <value>
                    <fullName>P16-AP</fullName>
                </value>
                <value>
                    <fullName>P16-HP</fullName>
                </value>
                <value>
                    <fullName>P18-HP</fullName>
                </value>
                <value>
                    <fullName>P20-12V</fullName>
                </value>
                <value>
                    <fullName>P20-240V</fullName>
                </value>
                <value>
                    <fullName>P20-24V</fullName>
                </value>
                <value>
                    <fullName>P20-3 Phase</fullName>
                </value>
                <value>
                    <fullName>P20-AP</fullName>
                </value>
                <value>
                    <fullName>P20-HP</fullName>
                </value>
                <value>
                    <fullName>P20Q-240V</fullName>
                </value>
                <value>
                    <fullName>P32-12V</fullName>
                </value>
                <value>
                    <fullName>P32-240V</fullName>
                </value>
                <value>
                    <fullName>P32-24V</fullName>
                </value>
                <value>
                    <fullName>P32-3Phase</fullName>
                </value>
                <value>
                    <fullName>P32-CNC3PH</fullName>
                </value>
                <value>
                    <fullName>P32Q-3PHAS</fullName>
                </value>
                <value>
                    <fullName>P58Q-3PHAS</fullName>
                </value>
                <value>
                    <fullName>S76-3Phase</fullName>
                </value>
                <value>
                    <fullName>S76-CNC3PH</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>H83E-12V</fullName>
                </value>
                <value>
                    <fullName>P 16-240V</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>P 16-24V</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>P16 -AP</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Limit1__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Terms__c</fullName>
        <label>Credit Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency_Code_in_Exo__c</fullName>
        <formula>CASE(CurrencyIsoCode,
 &quot;NZD&quot;,0,
 &quot;AUD&quot;,1,
 &quot;USD&quot;,2,
 &quot;GBP&quot;,3,
 &quot;EUR&quot;,4,
 &quot;YEN&quot;,5,
 &quot;SGD&quot;,6,00)</formula>
        <label>Currency Code in Exo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Spend__c</fullName>
        <label>Current Spend</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Class__c</fullName>
        <label>Customer Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Debtor_Pin__c</fullName>
        <inlineHelpText>10</inlineHelpText>
        <label>Debtor Pin</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Default_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customers (Default Contact)</relationshipLabel>
        <relationshipName>Customers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Invoice__c</fullName>
        <label>Default Invoice Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_payment_type__c</fullName>
        <label>Default Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_not_run_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not run Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Down_Time_in_Hrs_per_month__c</fullName>
        <label>Down Time in Hrs (per month)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Existing_Cost__c</fullName>
        <label>Existing Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FACEBOOK__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Financing_Statement_Pin__c</fullName>
        <inlineHelpText>10</inlineHelpText>
        <label>Financing Statement Pin</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Financing_Statement_Registration_Number__c</fullName>
        <inlineHelpText>20</inlineHelpText>
        <label>Financing Statement Registration Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fitting_Type__c</fullName>
        <label>Fitting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>1-Piece</fullName>
                </value>
                <value>
                    <fullName>2-Piece</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Box_Coil_Percent__c</fullName>
        <label>Full Box/Coil Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GST_Number__c</fullName>
        <label>GST Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_prices_on_PO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide prices on PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hydraulic_Oil_Usage_ltrs__c</fullName>
        <label>Hydraulic Oil Usage (ltrs.)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_New_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is New Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LINKEDIN__c</fullName>
        <label>LinkedIN</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Mins__c</fullName>
        <formula>(Now()-LastModifiedDate) * 24 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_turnover__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Last Month turnover</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_year_turnover__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Last year turnover</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_target_value__c</fullName>
        <label>Monthly Target Value (NZD)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <label>NPS Score</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_Order_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Order Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Hoses__c</fullName>
        <label>No of Hoses</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_orders__c</fullName>
        <label>No of orders</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Onboarding_Actual_Closure_Date__c</fullName>
        <label>Onboarding Actual Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Onboarding_Point_of_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onboarding Point of Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Onboarding_Status__c</fullName>
        <label>Onboarding Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Need to initiate</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onboarding_Target_Closure_Date__c</fullName>
        <label>Onboarding Target Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Onboarding_Target_Start_Date__c</fullName>
        <label>Onboarding Target Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Item__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Open Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPSR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PPSR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pop_up_Alert__c</fullName>
        <label>Pop up Alert</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Portal_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Customer created from Web Portal</inlineHelpText>
        <label>Portal Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Group__c</fullName>
        <label>Primary Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remaining_Credit_Balance__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Remaining Credit Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SET_UP_DATE_del__c</fullName>
        <label>Set Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Person_Code_in_Exo__c</fullName>
        <description>This stores exo code of sales person for SF to EXo integration purpose. Not to be shown on page layout.</description>
        <label>Sales Person Code in Exo</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sea_Freight_Lead_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sea Freight Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Group_del__c</fullName>
        <label>Secondary Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Set_up_Hose_Type__c</fullName>
        <label>Set up Hose Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Polyhose</fullName>
                </value>
                <value>
                    <fullName>Silflo</fullName>
                </value>
                <value>
                    <fullName>Yokohama</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Advance_Savings_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <description>On Checked it will show advance details on web portal</description>
        <label>Show Advance Savings Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Facilities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Facilities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Statement_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statement Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Statement_Delivery__c</fullName>
        <label>Statement/Remittance Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>E-mail</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stop_Credit__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Stop Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_to_Exo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Sync to Exo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>This_Month_TurnOver__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>This Month turnover</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>This_year_Turnover__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>This year turnover</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Saving__c</fullName>
        <formula>Existing_Cost__c - BOA_Offered_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Saving</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Business__c</fullName>
        <label>Type of Business</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadConvertedAcc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>leadConvertedAcc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>override_GST_rate__c</fullName>
        <label>Override GST rate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-1</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>GST RateAuto Select Rate</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.SALES</columns>
        <columns>PC_EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer</value>
        </filters>
        <label>All Customers</label>
    </listViews>
    <listViews>
        <fullName>All_Suppliers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Email__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Supplier</value>
        </filters>
        <label>All Suppliers</label>
    </listViews>
</CustomObject>